--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,15 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-body{
+@layer base {
+    html {
+        font-family: 'Raleway', serif;
+        font-style: normal;
+        color: #26262B;
+    }
+}
+
+body {
     margin: 0;
     padding:0;
     font-family: "Open Sans", sans-serif;
