--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
     html {
-        font-family: 'Raleway', serif;
+        font-family: 'Raleway', sans-serif;
         font-style: normal;
         color: #26262B;
     }
