--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap');
 
 * {
   font-family: 'Raleway', sans-serif;
@@ -73,18 +73,34 @@ h5 {
   @extend .title5
 }
 
-.link-plus {
+.link-underlined {
   @extend .text-regular;
   text-transform: uppercase;
   position: relative;
-  margin-left: 25px;
   cursor: pointer;
   transition: color .2s ease;
+  &::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    left: 0;
+    bottom: 1px;
+    background: currentColor;
+  }
+  &:hover {
+    color: var(--color-hover-blue);
+  }
+}
+
+.link-plus {
+  @extend .link-underlined;
+  margin-left: 25px;
 
   &::before {
     position: absolute;
     left: -25px;
-    top: -5px;
+    top: -6px;
     content: "+";
     font-weight: 400;
     font-size: 32px;
@@ -92,26 +108,17 @@ h5 {
     font-family: 'Inter', serif;
     text-decoration: none;
   }
-  &::after {
-    content: "";
-    width: 100%;
-    height: 1px;
-    position: absolute;
-    left: 0;
-    bottom: -3px;
-    background: #000000;
-  }
+}
+
+.link-menu {
+  font-weight: 800;
+  font-size: 21px;
+  line-height: 25px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: color .2s ease;
+  color: var(--color-semi-black);
   &:hover {
-    color: #267DFF;
-  }
-  &--white {
-    &::after {
-      background: #ffffff;
-    }
-    &:hover {
-      &::after {
-        background: #267DFF;
-      }
-    }
+    color: var(--color-hover-blue);
   }
 }
