--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,3 +15,14 @@ body {
     padding:0;
     font-family: "Open Sans", sans-serif;
 }
+
+:root {
+    --bg-main: #FFFFFF;
+    --bg-secondary: #F9F9F9;
+    --bg-dark: #040302;
+    --bg-light-grey: #F3F3F3;
+
+    --color-dark-grey: #26262B;
+    --color-hover-blue: #267DFF;
+    --color-semi-black: #10100E;
+}
