--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -8,7 +8,7 @@
 .title1 {
   font-size: 70px;
   line-height: 82px;
-  font-weight: 700;
+  font-weight: 400;
   text-transform: uppercase;
 }
 
@@ -53,6 +53,14 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 22px;
+}
+
+.text-section-title {
+  font-family: 'Inter', sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
 }
 
 .text-light {
@@ -114,6 +122,7 @@ h6 {
 .link-plus {
   @extend .link-underlined;
   margin-left: 25px;
+  display: inline-block;
 
   &::before {
     position: absolute;
