--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 @import "typo";
 @import "layout/header";
 @import "layout/burger";
@@ -19,4 +20,10 @@ body {
   min-height: 100svh;
   display: flex;
   flex-direction: column;
+}
+
+.container {
+  @media screen and (max-width: 640px) {
+    max-width: 100%;
+  }
 }
