new block (results)

--- a/src/styles/_flex.scss
+++ b/src/styles/_flex.scss
@@ -7,4 +7,12 @@
       gap: 108px;
     }
   }
+  &-4 {
+    display: flex;
+    flex-wrap: wrap;
+    @include md(dsk) {
+      flex-wrap: nowrap;
+      gap: 20px;
+    }
+  }
 }
