--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -143,7 +143,7 @@ h6 {
   position: relative;
   cursor: pointer;
   transition: color .2s ease;
-  &::after {
+  &:not(.no-underline)::after {
     content: "";
     width: 100%;
     height: 1px;
@@ -181,4 +181,20 @@ h6 {
   text-transform: uppercase;
   transition: color .2s ease;
   color: var(--color-semi-black);
+}
+
+.button1 {
+  border: 1px solid var(--color-half-white);
+  background: rgba(38, 125, 255, 0);
+  cursor: pointer;
+  transition: background-color .3s ease;
+  box-sizing: border-box;
+  &:hover {
+    background: var(--color-hover-blue);
+    color: #FFFFFF;
+    border: 1px solid var(--color-hover-blue);
+  }
+  span {
+    pointer-events: none;
+  }
 }
