--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,9 +21,13 @@ body {
     --bg-secondary: #F9F9F9;
     --bg-dark: #040302;
     --bg-light-gray: #F3F3F3;
+    --bg-black: #040302;
 
     --color-dark-gray: #26262B;
     --color-hover-blue: #267DFF;
     --color-semi-black: #10100E;
     --color-light-gray: #A8A8A8;
+    --color-hover-black: #1c1c1c;
+    --color-half-white: #7A7A7A;
+    --color-half-gray: rgba(135, 135, 135, 0.3);
 }
