--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,4 +30,5 @@ body {
     --color-hover-black: #1c1c1c;
     --color-half-white: #7A7A7A;
     --color-half-gray: rgba(135, 135, 135, 0.3);
+    --color-half-black: #3A3A3A;
 }
