--- a/src/styles/elements/_swiper.scss
+++ b/src/styles/elements/_swiper.scss
@@ -14,3 +14,22 @@
     width: calc(100% - 60px) !important;
   }
 }
+
+.swiper-reviews {
+  display: flex;
+  justify-content: center;
+  .swiper-wrapper {
+    @media screen and (max-width: $dsk) {
+      max-width: $lg;
+      padding-left: 70px;
+    }
+    @media screen and (max-width: $lg) {
+      max-width: $md;
+      padding-left: 18px;
+    }
+    @media screen and (max-width: $md) {
+      max-width: 100%;
+      padding-left: 20px;
+    }
+  }
+}
