--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,4 +31,5 @@ body {
     --color-half-white: #7A7A7A;
     --color-half-gray: rgba(135, 135, 135, 0.3);
     --color-half-black: #3A3A3A;
+    --color-red: #FF4B55;
 }
