--- a/src/styles/elements/_swiper.scss
+++ b/src/styles/elements/_swiper.scss
@@ -19,20 +19,26 @@
   display: flex;
   justify-content: center;
   .swiper-wrapper {
-    @media screen and (min-width: $dsk) {
-      padding-left: 70px;
-    }
     @media screen and (max-width: $dsk) {
       max-width: $lg;
-      padding-left: 70px;
     }
     @media screen and (max-width: $lg) {
       max-width: $md;
-      padding-left: 70px;
     }
     @media screen and (max-width: $md) {
       max-width: 100%;
-      padding-left: 20px;
     }
+  }
+  @media screen and (min-width: $sm) {
+    padding-left: 10px !important;
+  }
+  @media screen and (min-width: $md) {
+    padding-left: 34px !important;
+  }
+  @media screen and (min-width: $lg) {
+    padding-left: 70px !important;
+  }
+  @media screen and (min-width: $dsk) {
+    padding-left: 70px !important;
   }
 }
