--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -3,6 +3,7 @@
 @import "flex";
 @import "layout/header";
 @import "layout/burger";
+@import "layout/services";
 @import "layout/menu";
 @import "elements/swiper";
 @import "elements/form";
