--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,33 +3,34 @@
 @import 'tailwindcss/utilities';
 
 @layer base {
-    html {
-        font-family: 'Raleway', sans-serif;
-        font-style: normal;
-        color: #26262B;
-    }
+  html {
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    color: #26262b;
+  }
 }
 
 body {
-    margin: 0;
-    padding:0;
-    font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 :root {
-    --bg-main: #FFFFFF;
-    --bg-secondary: #F9F9F9;
-    --bg-dark: #040302;
-    --bg-light-gray: #F3F3F3;
-    --bg-black: #040302;
+  --bg-main: #ffffff;
+  --bg-secondary: #f9f9f9;
+  --bg-dark: #040302;
+  --bg-light-gray: #f3f3f3;
+  --bg-black: #040302;
 
-    --color-dark-gray: #26262B;
-    --color-hover-blue: #267DFF;
-    --color-semi-black: #10100E;
-    --color-light-gray: #A8A8A8;
-    --color-hover-black: #1c1c1c;
-    --color-half-white: #7A7A7A;
-    --color-half-gray: rgba(135, 135, 135, 0.3);
-    --color-half-black: #3A3A3A;
-    --color-red: #FF4B55;
+  --color-dark-gray: #26262b;
+  --color-hover-blue: #267dff;
+  --color-semi-black: #10100e;
+  --color-light-gray: #a8a8a8;
+  --color-hover-black: #1c1c1c;
+  --color-half-white: #7a7a7a;
+  --color-half-gray: rgba(135, 135, 135, 0.3);
+  --color-border-half-gray: rgba(217, 217, 217, 0.5);
+  --color-half-black: #3a3a3a;
+  --color-red: #ff4b55;
 }
