--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -202,6 +202,15 @@ h6 {
   transition: background-color .3s ease;
   box-sizing: border-box;
   &:hover {
+    color: var(--color-hover-blue);
+    border: 1px solid var(--color-hover-blue);
+  }
+  &:active {
+    background: var(--color-hover-blue);
+    color: #FFFFFF;
+    border: 1px solid var(--color-hover-blue);
+  }
+  .selected {
     background: var(--color-hover-blue);
     color: #FFFFFF;
     border: 1px solid var(--color-hover-blue);
