--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,7 @@ body {
 
   --color-dark-gray: #26262b;
   --color-hover-blue: #267dff;
+  --color-active-blue: #196dec;
   --color-semi-black: #10100e;
   --color-light-gray: #a8a8a8;
   --color-hover-black: #1c1c1c;
